Added more project meta data.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ description = "I/O access to virtual memory contents of processes"
 authors = [
     "Koutheir Attouchi <koutheir@gmail.com>"
 ]
+homepage = "https://github.com/mdcssw/process_vm_io"
+repository = "https://github.com/mdcssw/process_vm_io"
+documentation = "https://docs.rs/process_vm_io"
 readme = "README.md"
 license = "MIT"
 edition = "2018"
